Corrected minor formating problems, moslty to avoid line overflows when converting the XHTML pages into PDF documents.
git-svn-id: http://svn.logtalk.org/logtalk/trunk@2854 ac9c905b-388a-4ddf-9b6a-4063a022bc57

--- a/manuals/print.css
+++ b/manuals/print.css
@@ -156,3 +156,7 @@ ul, ol, dl {
 	display: compact;
 	page-break-before: avoid;
 }
+
+dl {
+	padding-left: 2em;
+}
